Fix small alignment issues

--- a/code/UI/Menu/Lobby/LobbyMenu.razor.scss
+++ b/code/UI/Menu/Lobby/LobbyMenu.razor.scss
@@ -111,7 +111,6 @@
         background-color: $bg-darkest;
         flex-direction: column;
         width: 60%;
-        gap: 5px;
         margin: 1%;
 
         LobbyMember {
@@ -150,6 +149,7 @@
     .server {
         width: 35%;
         flex-direction: column;
+        margin: 1%;
 
         MapInfo {
             flex-direction: column;
